--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,9 @@ git = "https://github.com/linebender/druid"
 rev = "6bb0f51adb7fe55d06fb53c2649f3ff0842aa6b2"
 
 [dependencies]
+derivative = "2.1.3"
 either= "1.6.1"
 log = "0.4.11"
+
+[dev-dependencies]
+insta = "1.5.1"
