--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ rev = "6bb0f51adb7fe55d06fb53c2649f3ff0842aa6b2"
 derivative = "2.1.3"
 either= "1.6.1"
 log = "0.4.11"
+tracing = "0.1.22"
+tracing-unwrap = "0.9.2"
+tracing-subscriber = "0.2.15"
 
 [dev-dependencies]
 insta = "1.5.1"
+test-env-log = { version = "0.2.4", default-features = false, features = ["trace"] }
+tracing-log = "0.1.1"
